[package]
name = "Rust_OG_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
